--- a/frontend/src/stylesheets/Question.css
+++ b/frontend/src/stylesheets/Question.css
@@ -12,6 +12,10 @@
   width: 60%;
 }
 
+.categories-list ul{
+  cursor: pointer;
+}
+
 .questions-list {
   flex-basis: 75%;
   text-align: center;
@@ -51,6 +55,7 @@
   color: white;
   padding: 3px 5px;
   margin-left: 0px !important;
+  cursor: pointer;
 }
 
 span.page-num {
